// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoritesList component matches the snapshot when cities are loading 1`] = `
<div
  className="FavList"
>
  <div
    className="FavouriteCity"
  >
    <div
      className="favCityHeader"
    >
      <h1>
        Moscow
      </h1>
      <img
        alt="Иконка погоды"
        src="i"
      />
      <h1>
        t
      </h1>
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="Loader"
    >
      <h1>
        Подождите, данные загружаются
      </h1>
      <div
        className="Spinner"
      />
    </div>
  </div>
  <div
    className="FavouriteCity"
  >
    <div
      className="favCityHeader"
    >
      <h1>
        Helsinki
      </h1>
      <img
        alt="Иконка погоды"
        src="i1"
      />
      <h1>
        t1
      </h1>
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="WeatherInfo"
    >
      <div
        className="Info"
      >
        <h3>
          Ветер
        </h3>
        <h4>
          w1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Облачность
        </h3>
        <h4>
          c1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Давление
        </h3>
        <h4>
          p1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Влажность
        </h3>
        <h4>
          h1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Координаты
        </h3>
        <h4>
          l1
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`FavoritesList component matches the snapshot when cities loaded 1`] = `
<div
  className="FavList"
>
  <div
    className="FavouriteCity"
  >
    <div
      className="favCityHeader"
    >
      <h1>
        Moscow
      </h1>
      <img
        alt="Иконка погоды"
        src="i"
      />
      <h1>
        t
      </h1>
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="WeatherInfo"
    >
      <div
        className="Info"
      >
        <h3>
          Ветер
        </h3>
        <h4>
          w
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Облачность
        </h3>
        <h4>
          c
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Давление
        </h3>
        <h4>
          p
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Влажность
        </h3>
        <h4>
          h
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Координаты
        </h3>
        <h4>
          l
        </h4>
      </div>
    </div>
  </div>
  <div
    className="FavouriteCity"
  >
    <div
      className="favCityHeader"
    >
      <h1>
        Helsinki
      </h1>
      <img
        alt="Иконка погоды"
        src="i1"
      />
      <h1>
        t1
      </h1>
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="WeatherInfo"
    >
      <div
        className="Info"
      >
        <h3>
          Ветер
        </h3>
        <h4>
          w1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Облачность
        </h3>
        <h4>
          c1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Давление
        </h3>
        <h4>
          p1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Влажность
        </h3>
        <h4>
          h1
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Координаты
        </h3>
        <h4>
          l1
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`FavoritesList component matches the snapshot when on error 1`] = `
<div
  className="FavList"
>
  <div
    className="FavouriteCity"
  >
    <div
      className="favCityHeader"
    >
      <h1>
        Moscow
      </h1>
      <img
        alt="Иконка погоды"
        src="i"
      />
      <h1>
        t
      </h1>
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="WeatherInfo"
    >
      <div
        className="Info"
      >
        <h3>
          Ветер
        </h3>
        <h4>
          w
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Облачность
        </h3>
        <h4>
          c
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Давление
        </h3>
        <h4>
          p
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Влажность
        </h3>
        <h4>
          h
        </h4>
      </div>
      <div
        className="Info"
      >
        <h3>
          Координаты
        </h3>
        <h4>
          l
        </h4>
      </div>
    </div>
  </div>
  <div
    className="FavouriteCity"
  >
    <div
      className="favCityHeader"
    >
      <h1>
        Helsinki
      </h1>
      <img
        alt="Иконка погоды"
        src="i1"
      />
      <h1>
        t1
      </h1>
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="Error"
    >
      <h1>
        Не удалось загрузить данные
      </h1>
    </div>
  </div>
</div>
`;
